# product-management

./: README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .gitignore  main.py  package.json  pyproject.toml  run.py  seed_data.py
apps/api/core/: config.py  database.py  supabase.py
apps/api/dependencies/: configs.py  database.py
apps/api/models/: projects.py  tables.py  tasks.py  teams.py  users.py
apps/api/routers/: projects.py  status.py  user.py
apps/api/services/: projects.py  user.py
apps/server/: .env.example  package.json  postman-collection.json  requests.http  test-server.sh
apps/server/src/: index.ts
apps/server/src/db/: index.ts
apps/server/src/lib/: auth.ts
apps/web/: README.md  middleware.ts  next.config.mjs  package.json
apps/web/app/: layout.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/protected/: page.tsx
apps/web/components/: app-sidebar.tsx  chart-area-interactive.tsx  counter.tsx  create-team-dialog.tsx  data-table.tsx  icons.tsx  mode-toggle.tsx  search-item.tsx  section-cards.tsx  sign-in-form.tsx  sign-up-form.tsx  site-header.tsx  tailwind-indicator.tsx  team-switcher.tsx  test-api.tsx  user-menu.tsx  user-online.tsx
apps/web/data/: data.ts  schema.ts
apps/web/hooks/: use-infinite-query.ts  use-members.ts  use-projects-query.ts  use-projects-redux.ts  use-projects.ts  use-tasks.ts
apps/web/lib/: NAVIGATION_README.md  auth-client.ts  config.ts  hooks.ts  members-utils.tsx  search-params.tsx  store.ts  types.ts
apps/web/lib/api/: auth.ts  (+7 more)
(+85 files in other folders)
